installer/tests/ui/digest_lowerhex.stderr
error[E0277]: the trait bound `sha2::digest::hybrid_array::Array<u8, UInt<UInt<UInt<UInt<UInt<UInt<UTerm, B1>, B0>, B0>, B0>, B0>, B0>>: LowerHex` is not satisfied
  --> tests/ui/digest_lowerhex.rs:13:22
   |
13 |     let _ = format!("{digest:x}");
   |                      ^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `LowerHex` is not implemented for `sha2::digest::hybrid_array::Array<u8, UInt<UInt<UInt<UInt<UInt<UInt<UTerm, B1>, B0>, B0>, B0>, B0>, B0>>`
   = help: the following other types implement trait `LowerHex`:
             &T
             &mut T
             Saturating<T>
             Wrapping<T>
             compiler_builtins::math::libm_math::support::big::i256
             compiler_builtins::math::libm_math::support::big::u256
             compiler_builtins::math::libm_math::support::hex_float::hex_fmt::Hex<T>
             i128
           and $N others
